now jwt token working correctly